--- a/mem_generation/src/main/resources/templates/user.html
+++ b/mem_generation/src/main/resources/templates/user.html
@@ -25,28 +25,14 @@
 			<div>
 				<h1>ЗАПОЛНИТЕ ФОРМУ</h1>
 				<form action="/user_choice" method="POST">
-					Выберете название мема: <select name="meme">
-						<option value="10-Guy">10 Guy</option>
-						<option value="2nd-Term-Obama">2nd Term Obama</option>
-						<option value="Ace-Primo">Ace Primo</option>
-						<option value="Advice-Dog">Advice Dog</option>
-						<option value="Albert-Einstein-1">Albert Einstein 1</option>
-						<option value="Am-I-The-Only-One-Around-Here">Am I The Only One Around Here</option>
-						<option value="American-Chopper-Argument">American Chopper Argument</option>
-						<option value="And-then-I-said-Obama">And then I said Obama</option>
-						<option value="Albert-Einstein-1">Albert Einstein 1</option>
-						<option value="Asshole-Ref">Asshole Ref</option>
-						<option value="Aw-Yeah-Rage-Face">Aw Yeah Rage Face</option>
-						<option value="Big-Family-Comeback">Big Family Comeback</option>
-						<option value="Bitch-Please">Bitch Please</option>
-						<option value="Intelligent-Dog">Intelligent Dog</option>
+					Выберете название изображения: <select name="meme">
+						<option value="adventurer">adventurer</option>
+						<option value="avataaars">avataaars</option>
+						<option value="adventurer-neutral">adventurer-neutral</option>
+						<option value="pixel-art">pixel-art</option>
+						<option value="big-ears">big-ears</option>
+						<option value="fun-emoji">fun-emoji</option>
 					</select><br />
-					Надпись сверху(не обязательно): <input
-						type="text"
-						name="top"><br />
-					Надпись снизу(не обязательно): <input
-						type="text"
-						name="bottom"><br />
 					<button type="submit">ОТПРАВИТЬ</button>
 				</form>
 				<p th:style="'color:' + red" th:text="${message}"></p>
